# pedestrian_detector_distributed_assignment

./: .gitignore  .gitmodules  README.md  README_OLD.md  SDA.md
PTZ_ROS/arbotix/: package.xml
PTZ_ROS/arbotix_msgs/: CMakeLists.txt
PTZ_ROS/arbotix_python/: .joints2.yaml.swp  joints.yaml  launch.launch  launch_nodes_camera_turret.launch
PTZ_ROS/publishers_arbotix/: .cproject  .project  CMakeLists.txt  package.xml
PTZ_ROS/publishers_arbotix/src/: publisher.cpp  publisher_2 (copy).cpp  publisher_2.cpp  publisher_vel_pos_all_sinterminar.cpp
PTZ_ROS/publishers_arbotix/srv/: GetPosition.srv
PTZ_ROS/publishers_arbotix_python/: CMakeLists.txt  package.xml
auxiliary_tools/: accuracy_calculator.m  imageLabelerconfig.mat  time_and_accuracy.xml
camera_node/: CMakeLists.txt  package.xml
camera_node/launch/: camera_node.launch
detection/: CMakeLists.txt  package.xml
detection/launch/: assignment_face_detector.launch  color_initialization.launch  post_process.launch  target_boxplot_track.launch
detection/src/: dk_find.py  find_ball.py  image_pub.py  post_process.py  target_boxplot_track.py  target_color_init.py  try.py
detection_osnet/: CMakeLists.txt  package.xml  setup.py
detection_osnet/cfg/: robot_1.yaml
detection_osnet/launch/: assignment.launch  robot_nodes.launch
detection_osnet/msg/: Accuracy.msg  MonitorUpdate.msg  ProcessData.msg  ProcessWindow.msg  Window.msg  WindowPack.msg
detection_osnet/src/: cfg_creator.py  (+8 more)
performance_testing/: CMakeLists.txt  bag_convert.py  package.xml
simplex/: CMakeLists.txt  false  launch_all.sh  package.xml
(+57 files in other folders)
